Twenty Fourteen: fix image alignment in editor styles, props azaozz and RDall. Fixes #26108. Built from https://develop.svn.wordpress.org/trunk@26409
git-svn-id: http://core.svn.wordpress.org/trunk@26309 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyfourteen/css/editor-style.css
+++ b/wp-content/themes/twentyfourteen/css/editor-style.css
@@ -354,6 +354,7 @@ img {
 	margin: 0 0 24px 0;
 	padding: 0;
 	text-align: left;
+	max-width: 474px;
 }
 
 .wp-caption.alignleft {
